add send poll to user